2007-06-18  Derek Price  <derek@ximbiot.com>

	* client.c (send_repository): Don't attempt to send metadata from CVS
	subdirectories when importing.

2007-06-15  Derek Price  <derek@ximbiot.com>

	* import.c (import): Check more carefully for files and directories
	named "CVS".
	* sanity.sh (import-1b): New test for same.
	(import-2): Test files named "CVS", in addition to directories.

2007-05-22  Larry Jones  <lawrence.jones@ugs.com>

	* rcs.c (RCS_fully_parse): Include revision in error message.

2007-05-07  Derek Price  <derek@ximbiot.com>

	* mkmodules.c (init): Assert that the server is not active.
	* server.c (serve_init): Send error message when the init command is
	received from a client.

	* sanity.sh (*): Avoid using remote init.
	(skip_always, localonly, restore_adm): New convenience functions.	

2007-03-08  Larry Jones  <lawrence.jones@ugs.com>

	* rcs.c (findmagictag): Cast node->data before doing arithmetic
	since it's now (void *).

2007-03-05  Larry Jones  <lawrence.jones@ugs.com>

	* rcs.c (RCS_delete_revs): When checking for tagged revisions,
	include magic branch tags.

2007-03-01  Larry Jones  <lawrence.jones@ugs.com>

	* import.c (import_descend_dir): Correct error message.
	* sanity.sh (pserver-3a): New test.

2006-09-14  Derek Price  <derek@ximbiot.com>

	* sanity.sh (server3, client2): New tests.

2006-09-07  Derek Price  <derek@ximbiot.com>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Improve comments.  Restore repaired error
	handling.

2006-09-06  Larry Jones  <lawrence.jones@ugs.com>

	* rcs.c (apply_rcs_changes): Improve linked list handling.  Remove
	unused variables and unreachable error handling code.  Avoid unneeded
	dynamic allocation of temp linevector.  Minor stylistic code clean up.

2006-09-06  Derek Price  <derek@ximbiot.com>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Improve header block comment.  Clean up
	unused linevector on non-fatal error.

2006-09-06  Derek Price  <derek@ximbiot.com>

	[bug #17560]